weird hamburger menu glitch on mobile version fixed

--- a/styles/_mobile.scss
+++ b/styles/_mobile.scss
@@ -13,21 +13,26 @@
       width: 100%;
       position: absolute;
       width: 0;
-      transition: 0.5s all ease-in-out;
+      transition: 0.0s all ease-in-out;
       z-index: -1;
       left: 50%;
       transform: translate(-50%, 0);
+
       li {
         margin-left: 0;
         margin-right: 0;
         margin-top: 20px !important;
+
         &:hover {
           background-color: initial;
         }
+
         &:first-child {
           margin-right: 0;
         }
+
         text-align: center;
+
         a {
           color: white;
           width: 30%;
@@ -36,20 +41,24 @@
         }
       }
     }
+
     #darkModeSlider {
       left: 15px;
       right: initial;
       top: 7.5px;
     }
+
     .hamburger-container {
       display: inline-block;
       margin: auto;
       width: auto;
       margin-right: 20px;
     }
+
     .mobile {
       display: block;
     }
+
     .open {
       display: flex;
       opacity: 1;
@@ -60,18 +69,22 @@
       margin-top: $navHeight;
       padding-bottom: $navHeight;
       z-index: 1000;
-      a{
+
+      a {
         display: block;
       }
-      ~ .hamburger-container {
+
+      ~.hamburger-container {
         .hamburger {
           div {
             &:first-of-type {
               transform: translateY(11px) rotate(-45deg);
             }
+
             &:nth-of-type(2) {
               opacity: 0;
             }
+
             &:last-of-type {
               transform: translateY(-11px) rotate(45deg);
             }
@@ -80,20 +93,25 @@
       }
     }
   }
+
   main {
+
     .main-name,
     .main-header {
       margin-right: 0;
       margin-left: 0;
     }
   }
+
   .about-container {
     .info-section {
       text-align: center;
+
       .header {
         margin-left: auto !important;
         margin-right: auto;
       }
+
       p {
         text-align: left;
         margin-left: auto !important;
@@ -101,6 +119,7 @@
       }
     }
   }
+
   .project-table {
     .project {
       &.read-more {
@@ -109,31 +128,40 @@
     }
   }
 }
+
 @media only screen and (max-width: 800px) {
   main {
     .main-name {
       font-size: 32px;
     }
+
     .main-header {
       font-size: 28px;
     }
+
     .project-table {
       width: 100%;
+
       .project {
         width: 75%;
         height: 600px;
+
         .container {
           flex-direction: column;
+
           .left {
             width: 100%;
             height: 25%;
+
             h2 {
               text-align: center;
             }
+
             p {
               text-align: center;
             }
           }
+
           .right {
             width: 100%;
             height: 75%;
@@ -141,13 +169,16 @@
             flex-direction: column;
             align-items: center;
             justify-content: flex-end;
+
             img {
               max-height: 60%;
               max-width: 75%;
             }
+
             .helper {
               display: none;
             }
+
             .read-more-button {
               position: relative;
               margin-left: auto;
@@ -158,6 +189,7 @@
               min-width: 200px;
               margin-top: 60px;
             }
+
             .repository {
               position: relative;
               margin-left: auto;
@@ -170,36 +202,44 @@
               margin-top: 10px;
               text-align: center;
             }
+
             .tags {
               position: relative;
               margin-bottom: 5px;
+
               p {
                 text-align: center;
               }
             }
           }
         }
+
         &.read-more {
           height: 800px;
         }
       }
     }
+
     .about-container {
       .info-section {
-        p{
+        p {
           width: 75%;
           text-align: center;
         }
-        .header{
-        h2{
-          font-size: 52px;
+
+        .header {
+          h2 {
+            font-size: 52px;
+          }
         }
-      }
+
         .panelContainer {
           flex-direction: column;
           width: 100%;
+
           .panel {
             width: 100%;
+
             h3 {
               margin-top: 15px;
             }
@@ -207,8 +247,10 @@
         }
       }
     }
+
     #message-form {
       width: 80%;
+
       input {
         &[type="submit"] {
           font-size: 1em;
