--- a/styles/index.css
+++ b/styles/index.css
@@ -719,9 +719,7 @@ a {
 }
 
 main {
-  min-height: calc(
-    100vh - 50px - 200px - 100px
-  );
+  min-height: calc(100vh - 50px - 200px - 100px);
   color: #2f3542;
 }
 main .landing {
@@ -907,7 +905,7 @@ main .about-container .info-section .panelContainer .panel .center {
     width: 100%;
     position: absolute;
     width: 0;
-    transition: 0.5s all ease-in-out;
+    transition: 0s all ease-in-out;
     z-index: -1;
     left: 50%;
     transform: translate(-50%, 0);
